--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -5,10 +5,10 @@
 <title>Quantify This!</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 	<!--<link href="css/verticalSlider.css" rel="stylesheet" type="text/css" />-->
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	
+
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 	<script src="http://d3js.org/d3.v2.js"></script>
@@ -25,12 +25,19 @@
   <!-- Home Page Header -->
   <div data-role="header" data-position="inline">
   	<h1>Quantify This!</h1>
-	<a id='authorize-button-calendar'>Authorize google calendar</a>
-	<a onclick="loginAppEngine()" id='authorize-button-appengine'>Authorize app engine</a>
+	
+	
   </div>
   <div data-role="content">
 	<div class="wrap">
-		<div class="wrap">
+		<div class="important">
+			<a id='authorize-button-calendar'>Please grant access to your google calendar</a>
+		</div>
+		<div class="important" id='authorize-button-appengine'>
+			<a onclick="loginAppEngine()">Please log in to google app engine</a>
+		</div>
+	
+		<div class="wrap buttonbar">
 			<div class="big_button">
 				<a href="#MarkMyMood">
 					<img src="images/mood.png" alt="Mark my mood" />
@@ -58,14 +65,14 @@
 			
 		</div>	
 		<hr/>
-		<div class="notifications">
-			<div class="notify">
-				Tip of the day!
-			</div>
-			<div class="notify">
-				Another tip of the day
-			</div>
+
+		<div class="notify">
+			Tip of the day!
 		</div>
+		<div class="notify">
+			Another tip of the day
+		</div>
+
 	</div>
   </div>
   <!-- Home Page Footer -->
