--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -48,21 +48,6 @@
 							<div class="label">Statistics</div>
 						</a>
 					</div>
-					<div class="big_button">
-						<a href="settings.html" data-ajax="false">
-							<img src="images/settings.png" alt="Settings" />
-							<div class="label">Settings</div>
-						</a>
-					</div>				
-				</div>	
-				<hr/>
-				
-				<div class="notify">
-					Tip of the day!
-				</div>
-				
-				<div class="notify">
-					Another tip of the day
 				</div>
 			</div>
 		</div>
@@ -85,57 +70,57 @@
 				<div class="center">
                     <div class="ui-grid-b slider_block">
                         <div class="ui-block-a">
-                            <label for="slider1" class="first">Energized</label>
+                            <label for="slider1" class="first">Tired</label>
                         </div>
                         <div class="ui-block-b">
                             <input type="range" id="slider1" min="0" max="100" value="50" step="1" />
                         </div>
                         <div class="ui-block-c">
-                            <label class="last">Tired</label>
+                            <label class="last">Energized</label>
                         </div>
                     </div><!-- /grid-b -->
                     <div class="ui-grid-b slider_block">
                         <div class="ui-block-a">
-                            <label for="slider2" class="first">Focused</label>
+                            <label for="slider2" class="first">Distracted</label>
                         </div>
                         <div class="ui-block-b">
                             <input type="range" id="slider2" min="0" max="100" value="50" step="1" />
                         </div>
                         <div class="ui-block-c">
-                            <label class="last">Distracted</label>
+                            <label class="last">Focused</label>
                         </div>
                     </div><!-- /grid-b -->
                     <div class="ui-grid-b slider_block">
                         <div class="ui-block-a">
-                            <label for="slider3" class="first">Happy</label>
+                            <label for="slider3" class="first">Sad</label>
                         </div>
                         <div class="ui-block-b">
                             <input type="range" id="slider3" min="0" max="100" value="50" step="1" />
                         </div>
                         <div class="ui-block-c">
-                            <label class="last">Sad</label>
+                            <label class="last">Happy</label>
                         </div>
                     </div><!-- /grid-b -->
                     <div class="ui-grid-b slider_block">
                         <div class="ui-block-a">
-                            <label for="slider4" class="first">Loving</label>
+                            <label for="slider4" class="first">Angry</label>
                         </div>
                         <div class="ui-block-b">
                             <input type="range" id="slider4" min="0" max="100" value="50" step="1" />
                         </div>
                         <div class="ui-block-c">
-                            <label class="last">Angry</label>
+                            <label class="last">Loving</label>
                         </div>
                     </div><!-- /grid-b -->
                     <div class="ui-grid-b slider_block">
                         <div class="ui-block-a">
-                            <label for="slider5" class="first">Calm</label>
+                            <label for="slider5" class="first">Stressed</label>
                         </div>
                         <div class="ui-block-b">
                             <input type="range" id="slider5" min="0" max="100" value="50" step="1" />
                         </div>
                         <div class="ui-block-c">
-                            <label class="last">Stressed</label>
+                            <label class="last">Calm</label>
                         </div>
                     </div><!-- /grid-b -->
 
@@ -162,20 +147,6 @@
 			</div>
 		</div>
 	</div><!-- mark mood page -->
-
-	<!--  Thanks PAGE! -->
-	<div data-role="page" data-theme="c" id="moodmarked_page">
-		<div data-role="header" data-position="inline" data-theme="c">
-			<h1>Mark My Mood - Thanks</h1>
-			<a href="#markmood_page" rel="external" data-icon="arrow-l" class="ui-btn-left"  data-transition="slidedown">Back</a>
-		</div>
-
-		<div data-role="content">
-            <div class="wrap">
-                <p>Hier komt een bedankje omdat de gebruiker zijn mood heeft ingevuld.</p>
-            </div>
-		</div>
-	</div><!-- thanks page -->
 
 	<!--  Calendar View PAGE! -->
 	<div data-role="page" data-theme="c" id="calendar_page">
@@ -211,8 +182,6 @@
                 <h1>Mood visualisation</h1>
                 <div id="graph">
                     <!-- graph gets loaded in this div -->
-
-
                 </div>
                 <div id="graph_controls" data-role="controlgroup" data-mini="true">
                     <a onclick="toggle_graph('energized')" data-role="button">Energized / Tired</a>
@@ -271,73 +240,12 @@
 		</div>
 	</div><!-- heart rate page -->
 
-    <script>
-        function getLocation()
-        {
-            if (navigator.geolocation)
-            {
-                navigator.geolocation.getCurrentPosition(showPosition);
-            }
-            else{
-                x.innerHTML="Geolocation is not supported by this browser.";
-            }
-        }
-        function getTemp(){
-            showPosition
-        }
-        function showPosition(position)
-        {
-
-
-            var APPID = 'dj0yJmk9OTFZSWlwM29rWVRFJmQ9WVdrOWVYQnNVMUZoTjJrbWNHbzlOakV4TnpNMk9UWXkmcz1jb25zdW1lcnNlY3JldCZ4PTky';		// our Yahoo APP id
-            var DEG = 'c';
-            var lat = position.coords.latitude;
-            var lon = position.coords.longitude;
-            var geoAPI = 'http://where.yahooapis.com/geocode?location='+lat+','+lon+'&flags=J&gflags=R&appid='+APPID;
-
-            var wsql = 'select * from weather.forecast where woeid=WID and u="'+DEG+'"',
-                    weatherYQL = 'http://query.yahooapis.com/v1/public/yql?q='+encodeURIComponent(wsql)+'&format=json&callback=?',code, city, results, woeid;
-
-            $.getJSON(geoAPI, function(r){
-
-                if(r.ResultSet.Found == 1){
-
-                    results = r.ResultSet.Results;
-                    city = results[0].city;
-                    code = results[0].statecode || results[0].countrycode;
-
-                    // This is the city identifier for the Yahoo weather API
-                    woeid = results[0].woeid;
-
-                    // Make a weather API request:
-                    $.getJSON(weatherYQL.replace('WID',woeid), function(r){
-                        if (!(r.query && r.query.count == 1)) {
-                            showError("Error retrieving weather data!");
-                            return null;
-                        }
-
-                        var item = r.query.results.channel.item.condition;
-                        var temp_element = $("#temperature");
-                        if (!item) {
-                            temp_element.val(null);
-                            return null;
-                        }
-                        temp_element.val(item.temp);
-                        return item.temp;
-                    });
-                }
-            }).error(function(){
-                        showError("Your browser does not support CORS requests!");
-                    });
-
-        }
-    </script>
-
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
     <script type="text/javascript" src="js/excanvas.min.js"></script>
     <script type="text/javascript" src="js/jquery.flot.js"></script>
     <script src="js/graph.js"></script>
+    <script src="js/weather.js"></script>
     <script src="js/gae_functions.js"></script>
     <script src="js/calendar_api.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=loadCalendar"></script>
