responsive layout, graphs almost working

--- a/QuantifyThisAppEngine/war/index.html
+++ b/QuantifyThisAppEngine/war/index.html
@@ -285,4 +285,7 @@
     <script src="js/heart_rate.js?onload=startAccelerometerOutput"></script>
 </body>
 
+</html>src="js/heart_rate.js?onload=startAccelerometerOutput"></script>
+</body>
+
 </html>
